--- a/src/main/resources/assets/mauricksfirst/lang/en_us.json
+++ b/src/main/resources/assets/mauricksfirst/lang/en_us.json
@@ -1,1 +1,7 @@
-{}
+{
+  "block.mauricksfirst.silverblock": "Silverblock",
+  "item.mauricksfirst.zilver": "Zilver",
+  "block.mauricksfirst.bleugrassblock": "Bleugrassblock",
+  "block.mauricksfirst.bleuleave": "Bleuleave",
+  "item.mauricksfirst.hamer": "Hamer"
+}
