--- a/src/main/resources/assets/mauricksfirst/lang/en_us.json
+++ b/src/main/resources/assets/mauricksfirst/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.mauricksfirst.silverblock": "Silverblock",
+  "item.mauricksfirst.diamantapple": "Diamantapple",
   "item.mauricksfirst.zilver": "Zilver",
   "block.mauricksfirst.bleugrassblock": "Bleugrassblock",
   "block.mauricksfirst.bleuleave": "Bleuleave",
